Starting without errors (or ui)